# astrix-node

./: Cargo.toml  LICENSE  README.md  check  check.ps1  test
astrixd/: Cargo.toml  README.md
astrixd/src/: args.rs  daemon.rs  main.rs
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  imports.rs  lib.rs  main.rs  matchers.rs  utils.rs
cli/src/extensions/: transaction.rs
cli/src/modules/: account.rs  address.rs  broadcast.rs  connect.rs  create-unsigned-tx.rs  details.rs  disconnect.rs  estimate.rs  export.rs  guide.txt  help.rs  history.rs  import.rs  list.rs  message.rs  metrics.rs  miner.rs  mod.rs  monitor.rs  mute.rs  network.rs  node.rs  ping.rs  reload.rs  rpc.rs  select.rs  send.rs  server.rs  settings.rs  sign.rs  sweep.rs  test.rs  theme.rs  track.rs  transfer.rs  wallet.rs
cli/src/wizards/: account.rs  import.rs  wallet.rs
components/addressmanager/: Cargo.toml
components/addressmanager/src/: lib.rs  port_mapping_extender.rs
components/addressmanager/src/stores/: address_store.rs  banned_address_store.rs  mod.rs
consensus/: Cargo.toml
consensus/benches/: hash_benchmarks.rs
consensus/client/: Cargo.toml
consensus/client/src/: error.rs  hash.rs  header.rs  imports.rs  input.rs  outpoint.rs  output.rs  script.rs  sign.rs  signing.rs  transaction.rs  utxo.rs  vtx.rs
consensus/client/src/serializable/: numeric.rs  string.rs
consensus/core/: Cargo.toml
consensus/core/benches/: serde_benchmark.rs
consensus/core/src/: acceptance_data.rs  block.rs  blockhash.rs  blockstatus.rs  constants.rs  header.rs  lib.rs  merkle.rs  muhash.rs  network.rs  pruning.rs  subnets.rs  trusted.rs  tx.rs
consensus/core/src/api/: mod.rs
consensus/core/src/config/: bps.rs  constants.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/errors/: block.rs  consensus.rs  pruning.rs  sync.rs  tx.rs
consensus/core/src/hashing/: header.rs  mod.rs  sighash.rs  tx.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/core/src/utxo/: utxo_diff.rs
consensus/notify/: Cargo.toml
consensus/notify/src/: collector.rs  connection.rs  notification.rs  notifier.rs  root.rs  service.rs
consensus/pow/: Cargo.toml
consensus/pow/benches/: bench.rs
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs  xoshiro.rs
consensus/src/: config.rs  errors.rs  params.rs  test_helpers.rs
consensus/src/consensus/: cache_policy_builder.rs  ctl.rs  factory.rs  mod.rs  services.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/constants/: mod.rs
consensus/src/model/services/: reachability.rs  relations.rs  statuses.rs
consensus/src/model/stores/: children.rs  (+21 more)
consensus/src/pipeline/: deps_manager.rs  mod.rs  monitor.rs
consensus/src/processes/: Parallel Processing.md  block_depth.rs  coinbase.rs  difficulty.rs  mass.rs  parents_builder.rs  past_median_time.rs  pruning.rs  relations.rs  traversal_manager.rs  window.rs
consensus/wasm/: Cargo.toml
consensus/wasm/src/: error.rs  utils.rs
crypto/merkle/: Cargo.toml
crypto/merkle/src/: lib.rs
crypto/muhash/: Cargo.toml
crypto/muhash/benches/: bench.rs
crypto/muhash/fuzz/: fuzz.sh
crypto/muhash/src/: lib.rs  u3072.rs
daemon/: Cargo.toml
daemon/src/: error.rs  imports.rs  lib.rs
daemon/src/astrixd/: mod.rs
daemon/src/cpu_miner/: mod.rs
database/: Cargo.toml
database/src/: access.rs  cache.rs  db.rs  errors.rs  key.rs  set_access.rs  utils.rs  writer.rs
database/src/db/: conn_builder.rs
indexes/processor/: Cargo.toml
indexes/processor/src/: errors.rs  processor.rs  service.rs
indexes/utxoindex/: Cargo.toml
indexes/utxoindex/src/: index.rs  update_container.rs
metrics/perf_monitor/: Cargo.toml
metrics/perf_monitor/src/: builder.rs  lib.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/: Cargo.toml
mining/errors/src/: block_template.rs  mempool.rs
mining/src/: cache.rs  errors.rs  manager.rs  manager_tests.rs  monitor.rs
mining/src/block_template/: builder.rs  errors.rs  selector.rs
mining/src/mempool/: check_transaction_standard.rs  config.rs  errors.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  validate_and_insert_transaction.rs
mining/src/model/: candidate_tx.rs  mod.rs  owner_txs.rs  topological_sort.rs
mining/src/testutils/: coinbase_mock.rs  consensus_mock.rs
protocol/flows/: Cargo.toml
protocol/flows/src/: flow_context.rs  flow_trait.rs  service.rs
rothschild/: Cargo.toml
rothschild/benches/: bench.rs
rothschild/src/: main.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs
rpc/grpc/core/: Cargo.toml
rpc/grpc/server/: Cargo.toml
rpc/service/: Cargo.toml
rpc/service/src/: collector.rs  service.rs
simpa/: Cargo.toml
simpa/src/: main.rs
simpa/src/simulator/: miner.rs  network.rs
testing/integration/: Cargo.toml
testing/integration/src/: consensus_integration_tests.rs  consensus_pipeline_tests.rs  daemon_integration_tests.rs  mempool_benchmarks.rs  rpc_tests.rs  subscribe_benchmarks.rs
wallet/core/: Cargo.toml
wallet/core/src/: derivation.rs  deterministic.rs  error.rs  events.rs  imports.rs  lib.rs  message.rs  metrics.rs  prelude.rs  rpc.rs  settings.rs  utils.rs
wallet/keys/: Cargo.toml
wallet/keys/src/: derivation_path.rs  error.rs  imports.rs  privatekey.rs  privkeygen.rs  pubkeygen.rs  publickey.rs  types.rs  xprv.rs  xpub.rs
wallet/native/: Cargo.toml
wallet/native/src/: main.rs
wallet/pskt/: Cargo.toml
wallet/pskt/examples/: multisig.rs
wallet/pskt/src/: global.rs  input.rs  lib.rs  output.rs
wasm/: CHANGELOG.md  Cargo.toml  README.md  build-docs  build-node  build-node-dev  build-release  build-web  build-web-dev
wasm/core/: Cargo.toml
wasm/examples/: init.js  package.json
wasm/examples/browser-extension/: index.html  server.js
wasm/examples/web/: browser-extension.html  get-block-dag-info.html  get-server-info.html  index.html  subscribe-block-added.html  subscribe-daa-changed.html  utxo-context.html  xpub.html
wasm/npm/: README.md  index.js  package.json
wasm/src/: lib.rs  version.rs
(+408 files in other folders)
