[package]
name = "rothschild"
description = "Astrix Transaction Generator"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrix-addresses.workspace = true
astrix-consensus-core.workspace = true
astrix-core.workspace = true
astrix-grpc-client.workspace = true
astrix-notify.workspace = true
astrix-rpc-core.workspace = true
astrix-txscript.workspace = true
astrix-utils.workspace = true

async-channel.workspace = true
clap.workspace = true
faster-hex.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rayon.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "bench"
harness = false
