[package]
name = "astrix-consensus-notify"
description = "Astrix consensus notifier"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
futures.workspace = true
astrix-consensus-core.workspace = true
astrix-core.workspace = true
astrix-hashes.workspace = true
astrix-notify.workspace = true
astrix-utils.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
triggered.workspace = true
