[package]
name = "astrix-index-processor"
description = "Astrix index processor"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrix-consensus-core.workspace = true
astrix-consensus-notify.workspace = true
astrix-consensusmanager.workspace = true
astrix-core.workspace = true
astrix-database.workspace = true
astrix-hashes.workspace = true
astrix-index-core.workspace = true
astrix-notify.workspace = true
astrix-utils.workspace = true
astrix-utxoindex.workspace = true

async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
log.workspace = true
paste.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "signal" ]}
triggered.workspace = true

[dev-dependencies]
astrix-consensus.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
rand = {workspace = true,  features = [ "small_rng" ]}