[package]
name = "astrix-perf-monitor"
description = "Astrix process performance monitoring tools"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
include.workspace = true
repository.workspace = true

[dependencies]
astrix-core.workspace = true
log.workspace = true
portable-atomic.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time"] }
workflow-perf-monitor.workspace = true
