[package]
name = "astrix-p2p-flows"
description = "Astrix p2p flows"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrix-core.workspace = true
astrix-consensus-core.workspace = true
astrix-consensus-notify.workspace = true
astrix-p2p-lib.workspace = true
astrix-utils.workspace = true
astrix-utils-tower.workspace = true
astrix-hashes.workspace = true
astrix-muhash.workspace = true
astrix-connectionmanager.workspace = true
astrix-addressmanager.workspace = true
astrix-consensusmanager.workspace = true
astrix-mining.workspace = true
astrix-notify.workspace = true

async-trait.workspace = true
futures = { workspace = true, features = ["alloc"] }
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = { workspace = true, features = ["net"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
chrono.workspace = true
