[package]
name = "astrix-rpc-core"
description = "Astrix RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "astrix-consensus-client/wasm32-sdk",
    "astrix-consensus-wasm/wasm32-sdk"
]

[dependencies]
astrix-addresses.workspace = true
astrix-consensus-core.workspace = true
astrix-consensus-client.workspace = true
astrix-consensus-notify.workspace = true
astrix-consensus-wasm.workspace = true
astrix-core.workspace = true
astrix-hashes.workspace = true
astrix-index-core.workspace = true
astrix-math.workspace = true
astrix-mining-errors.workspace = true
astrix-notify.workspace = true
astrix-txscript.workspace = true
astrix-utils.workspace = true
astrix-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints.clippy]
empty_docs = "allow"
