[package]
name = "astrix-testing-integration"
publish = false
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrix-alloc.workspace = true            # This changes the global allocator for all of the next dependencies so should be kept first

astrix-addresses.workspace = true
astrix-bip32.workspace = true
astrix-consensus-core.workspace = true
astrix-consensus-notify.workspace = true
astrix-consensus.workspace = true
astrix-consensusmanager.workspace = true
astrix-core.workspace = true
astrix-database.workspace = true
astrix-grpc-client.workspace = true
astrix-grpc-core.workspace = true
astrix-grpc-server.workspace = true
astrix-hashes.workspace = true
astrix-index-processor.workspace = true
astrix-math.workspace = true
astrix-merkle.workspace = true
astrix-muhash.workspace = true
astrix-notify.workspace = true
astrix-pow.workspace = true
astrix-rpc-core.workspace = true
astrix-rpc-service.workspace = true
astrix-txscript.workspace = true
astrix-utils.workspace = true
astrix-utxoindex.workspace = true
astrix-wrpc-server.workspace = true
astrixd.workspace = true

async-channel.workspace = true
async-trait.workspace = true
bincode.workspace = true
clap.workspace = true
chrono.workspace = true
crossbeam-channel.workspace = true
dhat = { workspace = true, optional = true }
faster-hex.workspace = true
flate2.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
rand_distr.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde.workspace = true
smallvec.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
workflow-perf-monitor.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "macros", "process"] }
astrix-txscript-errors.workspace = true

[features]
heap = ["dhat"]
html_reports = []
devnet-prealloc = ["astrixd/devnet-prealloc"]
