[package]
name = "astrix-wallet-pskt"
keywords = ["astrix", "wallet", "pskt", "psbt", "bip-370"]
description = "Partially Signed Astrix Transaction"
categories = ["cryptography::cryptocurrencies"]
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[features]
wasm32-sdk = ["astrix-consensus-client/wasm32-sdk"]
wasm32-types = ["astrix-consensus-client/wasm32-types"]

[dependencies]
astrix-bip32.workspace = true
astrix-consensus-client.workspace = true
astrix-consensus-core.workspace = true
astrix-txscript-errors.workspace = true
astrix-txscript.workspace = true
astrix-utils.workspace = true

derive_builder.workspace = true
secp256k1.workspace = true
serde-value.workspace = true
serde.workspace = true
serde_repr.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
