[package]
name = "astrix-grpc-server"
description = "Astrix gRPC server"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
astrix-consensus-core.workspace = true
astrix-core.workspace = true
astrix-grpc-core.workspace = true
astrix-notify.workspace = true
astrix-rpc-core.workspace = true
astrix-rpc-macros.workspace = true
astrix-rpc-service.workspace = true
astrix-utils-tower.workspace = true
astrix-utils.workspace = true

async-channel.workspace = true
async-stream.workspace = true
async-trait.workspace = true
faster-hex.workspace = true
futures.workspace = true
h2.workspace = true
itertools.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
paste.workspace = true
prost.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["gzip"] }
triggered.workspace = true
uuid.workspace = true

[dev-dependencies]
astrix-grpc-client.workspace = true
